--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "Selvania-Launcher",
-    "preductname": "Selvania Launcher",
+    "name": "Shirocraft-Launcher",
+    "preductname": "Shirocraft Launcher",
     "version": "2.0.5",
-    "description": "Launcher Mincraft pour le serveur Selvania",
+    "description": "Serveur Minecraft semi-RP sur recrutement.",
     "main": "src/app.js",
     "author": {
-        "name": "luuxis, Inc.",
-        "email": "contact@luuxis.fr",
+        "name": "Shirocraft",
+        "email": "contact@shirocraft.fr",
         "url": "https://github.com/luuxis"
     },
     "url": "http://launcher.luuxis.fr",
