--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Shirocraft-Launcher",
+    "name": "shirocraft-launcher",
     "preductname": "Shirocraft Launcher",
-    "version": "2.0.5",
+    "version": "2.0.8",
     "description": "Serveur Minecraft semi-RP sur recrutement.",
     "main": "src/app.js",
     "author": {
@@ -9,7 +9,7 @@
         "email": "contact@shirocraft.fr",
         "url": "https://github.com/luuxis"
     },
-    "url": "http://launcher.luuxis.fr",
+    "url": "http://90.125.118.55:8888",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
         "dev": "cross-env-shell DEV_TOOL=open nodemon --exec npm start",
@@ -39,6 +39,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/luuxis/Selvania-Launcher.git"
+        "url": "git+https://github.com/kairo00/Shirocraft-Launcher.git"
     }
 }
